...
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_ime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Pero Perić"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/tv_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="pero@email.com"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:layout_marginTop="3dp" />
...
